<resources >
    <string name="app_name">ToolBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="refresh_normal">normal</string>
    <string name="current_power">The current remaining power</string>
    <string name="change_screen_light">Screen brightness control</string>
    <string name="close_screen_time">Automatic lock screen time</string>
    <string name="wlan_net">WLAN Network</string>
    <string name="mobile_net">2G/3G Network</string>
    <string name="gps">GPS Location</string>
    <string name="bluetooth">BlueTooth</string>
    <string name="power_management">Power Management</string>
    <string name="action_settings">Settings</string>
    <string name="history_title">Historical record</string>
    <string name="about">about</string>
    <string name="clear_history">Empty</string>
    <string name="calculator_invalid_format">Invalid format</string>

    <string name="clock_title">Stopwatch</string>
    <string name="clock_start">Start</string>
    <string name="clock_reset">Reset</string>
    <string name="clock_pause">Pause</string>
    <string name="clock_restart">Restart</string>
    <string name="clock_times">Times</string>
    <string name="pic_save_path">Save path:</string>
    <string name="no_camera">The camera is not available！</string>
    <string name="face_camera_error">Abnormal front-facing camera！</string>
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="health">Health</string>
    <string name="good">Good</string>
    <string name="low_temperature">Low temperature</string>
    <string name="high_temperature">High temperature</string>
    <string name="high_voltage">High voltage</string>

    <string name="bad">Bad</string>
    <string name="technology">Technology</string>

    <string name="clean_msg">Clearing up the rubbish %s</string>
    <string name="clean_now">Perfect,try again later</string>

    <string name="str_ram" translatable="false">RAM</string>
    <string name="str_rom" translatable="false">ROM</string>
    <string name="str_cpu" translatable="false">CPU</string>

    <string name="ij">Boosted</string>
    <string name="pd">Total Cleaned: %1$s</string>

</resources>