<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clock_background"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/title_miao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/clock_title"
            android:textColor="@color/white"
            android:textSize="25dp"/>

        <com.global.toolbox.clock.TimeView
            android:id="@+id/time_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/title_miao"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/time_view">

            <TextView
                android:id="@+id/check_times"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/clock_times"
                android:textColor="@color/white"
                android:textSize="25dp"
                />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"

                android:text="@string/clock_start"
                android:textColor="@color/white"
                android:textSize="25dp"
                />
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_layout">
    </ListView>


</RelativeLayout>