<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingLeft="@dimen/pid_r"
              android:paddingRight="@dimen/pid_l"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="5dp"
        >

        <TextView
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_screen_light"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/battery_screen_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/battery_off"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>

    <RelativeLayout
        android:id="@+id/battery_seek_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:visibility="gone"
        >

        <SeekBar
            android:id="@+id/battery_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/battery_sleep_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:paddingBottom="11dp"
        android:paddingLeft="6dp"
        android:paddingRight="11dp"
        android:paddingTop="11dp"
        >

        <TextView
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close_screen_time"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/battery_sleep_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2分钟"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="6dp"
        >

        <TextView
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wlan_net"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>


        <ImageView
            android:id="@+id/battery_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="6dp"
        >

        <TextView
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mobile_net"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/battery_2g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="6dp"
        >

        <TextView
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/battery_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/battery_on"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="6dp"
        >

        <TextView
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/battery_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_temperature"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/wendu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            />

        <ImageView
            android:id="@+id/wendu_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_stats_indicator_green"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_vol"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltage"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/dianya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            />

        <ImageView
            android:id="@+id/dianya_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_stats_indicator_green"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_health"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/jiankang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_stats_indicator_green"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/battery_background"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/battery_item"
        android:gravity="center_vertical"
        android:padding="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_technology"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:textColor="@color/battery_text"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/jishu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msg_stats_indicator_gray"/>
    </LinearLayout>


</LinearLayout>
